DigicielFull/force-app/main/default/objects/Market__c/fields/ICTMRCBudget__c.field-meta.xml
<CustomField>
    <fullName>ICTMRCBudget__c</fullName>
    <label>ICT MRC Budget</label>
    <summarizedField>Market_Monthly_Budget__c.ICTMRCMonthlyBudget__c</summarizedField>
    <summaryForeignKey>Market_Monthly_Budget__c.Market__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>