DigicielFull/force-app/main/default/objects/Market__c/fields/OTCBudget__c.field-meta.xml
<CustomField>
    <fullName>OTCBudget__c</fullName>
    <label>OTC Budget</label>
    <summarizedField>Market_Monthly_Budget__c.OTCMonthlyBudget__c</summarizedField>
    <summaryForeignKey>Market_Monthly_Budget__c.Market__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>