DigicielFull/force-app/main/default/objects/Market__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>Total_Fiscal_Year_Budget__c</columns>
    <columns>OTCBudget__c</columns>
    <columns>GSMMRCBudget__c</columns>
    <columns>ICTMRCBudget__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>